# string-alignment

./: README.md  string-alignment.cabal
src/Alignment/: NeedlemanWunsch.hs  Types.hs
