cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               string-alignment
synopsis:           A library for functionality related to string alignment
version:            0.1.0


executable run
  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/

  build-depends:
      base
    , bytestring  >= 0.10.10.0
    , massiv      >= 0.4.3.0
    , vector      >= 0.12.0.3

Library Align

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , bytestring  >= 0.10.10.0
    , extra       >= 1.6.18
    , massiv      >= 0.4.3.0
    , matrices    >= 0.5.0
    , vector      >= 0.12.0.3

  exposed-modules:
    Alignment.Types
    Alignment.NeedlemanWunsch


  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
        ^>= 2.13.2
    , tasty
        ^>= 1.2.3
    , tasty-hunit
        ^>= 0.10
    , tasty-quickcheck
        ^>= 0.10
    , text
        ^>=1.2.3
